# griffin

./: COPYING  README.md  meson.build  org.griffin.app.json  org.griffin.app.json~
data/: meson.build  org.griffin.app.desktop.in  org.griffin.app.gschema.xml  org.griffin.app.metainfo.xml.in  org.griffin.app.service.in
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: griffin.gresource.xml  griffin.in  main.py  meson.build  toast_service.py  welcome.blp  window.blp  window.py  window.ui
src/backend/: __init__.py  load_data.py  save_to.py
src/ui/: shortcuts-dialog.blp  window.blp
src/views/: welcome.py  window.py
